# gnucash

./: .cvsignore  .gitattributes  .gitignore  .gitlab-ci.yml  .travis.yml  0001-Change-gtkmacintegration-gtk2-include-directory-back.patch  ABOUT-NLS  AUTHORS  CHANGELOG.md  CHANGES  CMakeLists.txt  ChangeLog  ChangeLog.1  ChangeLog.1999  ChangeLog.2000  ChangeLog.2001  ChangeLog.2002  ChangeLog.2003  ChangeLog.2004  ChangeLog.2005  ChangeLog.2006  ChangeLog.2006-manual  ChangeLog.2007  ChangeLog.2008  ChangeLog.2009  ChangeLog.2010  ChangeLog.2011  ChangeLog.2012  ChangeLog.2013  ChangeLog.2014  ChangeLog.2015  ChangeLog.2016  ChangeLog.2017  ChangeLog.2018  ChangeLog.2020  ChangeLog.2021  ChangeLog.2022  ChangeLog.2023  Configure-osr5  Configure-uw7  (+79 more)
accounts/: CMakeLists.txt  Makefile.am
accounts/C/: Makefile.am  acctchrt_brokerage  acctchrt_brokerage.gnucash-xea  acctchrt_business.gnucash-xea  acctchrt_carloan  acctchrt_carloan.gnucash-xea  acctchrt_cdmoneymkt  acctchrt_cdmoneymkt.gnucash-xea  acctchrt_checkbook.gnucash-xea  acctchrt_childcare  acctchrt_childcare.gnucash-xea  acctchrt_common  acctchrt_common.gnucash-xea  acctchrt_currency  acctchrt_currency.gnucash-xea  acctchrt_eduloan  acctchrt_eduloan.gnucash-xea  acctchrt_fixedassets  acctchrt_fixedassets.gnucash-xea  acctchrt_full  acctchrt_full.gnucash-xea  acctchrt_homeloan  acctchrt_homeloan.gnucash-xea  acctchrt_homeown  acctchrt_homeown.gnucash-xea  acctchrt_otherloan  acctchrt_otherloan.gnucash-xea  acctchrt_renter  acctchrt_renter.gnucash-xea  acctchrt_retiremt  acctchrt_retiremt.gnucash-xea  acctchrt_spouseinc  acctchrt_spouseinc.gnucash-xea  acctchrt_spouseretire  acctchrt_spouseretire.gnucash-xea  acctlist_brokerage  acctlist_brokerage.gnucash-xea  acctlist_carloan  acctlist_carloan.gnucash-xea  acctlist_cdmoneymkt  (+26 more)
accounts/ca/: CMakeLists.txt  (+15 more)
borrowed/: CMakeLists.txt  Makefile.am  README
cashutil/: AUTHORS  ChangeLog  HACKING  Makefile.am  NEWS  README  README.cvs  README.svn  TODO  autogen.sh  cashutil-autogen.sh  configure.ac  make-potfiles.in
checks/: CMakeLists.txt  Makefile.am  deluxe.chk  quicken.chk  quicken_wallet.chk  voucher.chk
cmake/: CMakeLists.txt  README_CMAKE.txt  cmake_uninstall.cmake.in  configure-appdata.cmake  configure-gnucash-desktop.cmake  configure-manpage.cmake  configure-totd.cmake  git2version-info.cmake  insert-vcs-data.cmake  no-vcs2version-info.cmake  version-info2env.cmake
common/: CMakeLists.txt  Makefile.am  base-typemaps.i  config.h.cmake.in  gnc-test-env.pl  guile-mappings.h  platform.h  swig-utf8.patch
data/: CMakeLists.txt  Makefile.am
doc/: .cvsignore  CMakeLists.txt  DOCUMENTERS  HACKING  INSTALL  Makefile.am  Makefile.in  RAW-NOTES  README  README-ca.win32-bin.txt  README-de.win32-bin.txt  README-fr.win32-bin.txt  README-hr.win32-bin.txt  README-it.win32-bin.txt  README-lv.win32-bin.txt  README-nl.win32-bin.txt  README-zh_CN.win32-bin.txt  README-zh_TW.win32-bin.txt  README.HBCI  README.OFX  README.build-system  README.dependencies  README.francais  README.german  README.translator.txt  README.txt  README.win32-bin.txt  SuSE-6.3.txt  TRANSLATION_HOWTO  What_is_Euro_support  build-aix.txt  build-osx.txt  build-solaris.txt  build-suse.txt  build-system  crypto-currencies.md  generic_objects.txt  gnc-fq-dump.1  gnc-fq-helper.1  gnc-prices.1  (+12 more)
doc-tools/: .cvsignore  Makefile.am  build-help-index.in  dbadd.c
gnucash/: CMakeLists.txt  CMakeLists.txt-bin  Makefile.am  environment.in  generate-gnc-script  gnucash-310.css  gnucash-320.css  gnucash-base.cpp  gnucash-base.hpp  gnucash-bin.c  gnucash-cli.cpp  gnucash-commands.cpp  gnucash-commands.hpp  gnucash-core-app.cpp  gnucash-core-app.hpp  gnucash-fallback-310.css  gnucash-fallback.css  gnucash-gresources.xml  gnucash-locale-macos.mm  gnucash-locale-platform.h  gnucash-locale-windows.c  gnucash-strip-svn-datafile.sh  gnucash-valgrind.in  gnucash-windows-locale.c  gnucash.c  gnucash.cpp  gnucash.css  gnucash.rc.in  price-quotes.scm
intl-scm/: Makefile.am  xgettext.scm
libgnucash/: CMakeLists.txt  Makefile.am
macros/: .cvsignore  CMakeLists.txt  Makefile.am  README  ac_pkg_swig.m4  ac_python_devel.m4  aclocal-include.m4  acx_pthread.m4  aqbanking.m4  as-scrub-include.m4  autogen.sh  ax_check_preproc_flag.m4  ax_swig_python.m4  binreloc.m4  compiler-flags.m4  curses.m4  g-wrap.m4  gnome-bonobo-check.m4  gnome-common.m4  gnome-cxx-check.m4  gnome-fileutils.m4  gnome-gdk-pixbuf.m4  gnome-gettext.m4  gnome-ghttp-check.m4  gnome-guile-checks.m4  gnome-libgtop-check.m4  gnome-objc-checks.m4  gnome-pilot.m4  gnome-print-check.m4  gnome-pthread-check.m4  gnome-support.m4  gnome-undelfs.m4  gnome-vfs.m4  gnome-x-checks.m4  gnome-xml-check.m4  gnome.m4  gperf-check.m4  legacy_macros.m4  linger.m4  m4_ax_boost_base.m4  (+5 more)
packaging/: CMakeLists.txt  Makefile.am  gnucash-1.9.x.ebuild  gnucash-2.1.x.ebuild  gnucash.spec.in
po/: .cvsignore  CMakeLists.txt  ChangeLog  Makefile.in.in  Makevars  POTFILES.ignore  POTFILES.in  POTFILES.skip  README  ar.po  as.po  az.po  bg.po  brx.po  ca.po  check-po.cmake  cs.po  da.po  de.po  de_CH.po  doi.po  el.po  en.po  en_AU.po  en_GB.po  en_NZ.po  es.po  es_NI.po  et.po  eu.po  extract-macros.perl.in  fa.po  fi.po  fr.po  gnc-glossary.txt  gnucash-pot.cmake  gnucash.po  gnucash.pot  gu.po  guile_strings.txt  (+45 more)
rpm/: .cvsignore  Makefile.am  Makefile.in  README  gnucash-sql.spec.in  gnucash.spec  gnucash.spec.in  xacc.spec  xacc.wmconfig  xacc_fr.spec
src/: .cvsignore  AccWindow.c  AccWindow.h  Account.c  AccountMenu.c  Action.c  AdjBWindow.c  AdjBWindow.h  Architecture.txt  BuildMenu.c  CMakeLists.txt  Data.c  Destroy.c  Destroy.h  EuroUtils.c  EuroUtils.h  FileBox.c  FileBox.h  FileDialog.c  FileDialog.h  FileIO.c  HelpWindow.c  Ledger.c  LedgerUtils.c  MainWindow.c  MainWindow.h  Makefile  Makefile.am  Makefile.in  MultiLedger.c  MultiLedger.h  PopBox.c  QIFIO.c  QuickFill.c  README  README.modules  RecnWindow.c  RecnWindow.h  Refresh.c  Refresh.h  (+54 more)
test-templates/: CMakeLists.txt  Makefile.am  Makefile.decl  README  make-testfile  test-module.c  test-suite.c  testmain.c
(+10858 files in other folders)
